# ModelAtlas

./: .coverage  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  README.archive.md  README.md  README_ModelAtlas.md  SKILL.md  pyproject.toml  sonar-project.properties  wiki.yaml
.claude/: CLAUDE.md  compass.yaml  lintgate.yaml  settings.json
.claude/rules/: inquiry.md  lg_focus.md  lg_session.md  theory.md
.github/workflows/: ci.yml  deploy-docs.yml  spec-badges.yml
.wiki/: architecture-data.md  architecture-pipeline.md  architecture-server.md  concept-map.md  data-distribution.md  data-model.md  emergent-similarity.md  extraction-pipeline.md  getting-started.md  glossary.md  home.md  manifest.json  navigation-geometry.md  query-engine.md  query-examples.md  signed-hierarchies.md  system-overview.md  the-gap.md  theory-overview.md  user-guide.md
data/expansions/: domain_specialization.yaml
deploy/: README.md  com.modelatlas.coherence.plist  com.modelatlas.ingest.plist  com.modelatlas.ollama.plist  com.modelatlas.phase_e.merge_periodic.plist  com.modelatlas.searxng_keepalive.plist  com.modelatlas.sync.plist
deploy/phase_e/: README.md  com.modelatlas.phase_e.homebridge.4.plist  com.modelatlas.phase_e.homebridge.5.plist  com.modelatlas.phase_e.local.0.plist  com.modelatlas.phase_e.local.1.plist  com.modelatlas.phase_e.local.2.plist  com.modelatlas.phase_e.local.3.plist  com.modelatlas.phase_e.macpro.2.plist  com.modelatlas.phase_e.macpro.3.plist
docs/: DESIGN.md  README.old.md  admin.md  coherence.md  comparison.md  data-distribution.md  pipeline.md  reconciler.md  wiki-materializer.md
docs/wiki/: _Footer.md  _Sidebar.md  _metrics.yaml  _template.html  concept-map.md  data-distribution.md  data-model.md  emergent-similarity.md  extraction-pipeline.md  getting-started.md  glossary.md  home.md  navigation-geometry.md  query-engine.md  query-examples.md  script.js  signed-hierarchies.md  style.css  system-overview.md  the-gap.md
scripts/: PHASE_E_RESUME.md  RESUME.md  antigravity_validation.md  auto_pipeline.py  backfill_config.py  backfill_raw_json.py  c2_to_c3_export.py  compute_spec_metrics.py  export_phase_e.py  gemini_retry_errors.py  gemini_validate.py  merge_phase_e_periodic.sh  phase_e_dashboard.sh  phase_e_postprocess.py  phase_e_worker.py  phase_e_worker_wrapper.sh  publish_pages.py  publish_wiki.py  recertify_corpus.py  recover_zero_anchor_stubs.py  repull_and_reextract.py  scrub_multi_tier.py  searxng_keepalive.sh  sync_and_reconcile.sh  vibe_gapfill_worker.py  wesker_ci.py  wesker_filter.py  wiki_transforms.py
src/hf_model_search/: __init__.py  cache.py  config.py  db.py  query.py  server.py
src/model_atlas/: __init__.py  _formatting.py  admin.py  aliases.py  coherence.py  config.py  contract.py  db.py  db_bootstrap.py  db_ingest.py  db_queries.py  gating.py  ground_truth.py  hierarchy.py  ingest.py  ingest_cli.py  ingest_phase_c.py  ingest_phase_c_merge.py  ingest_phase_e.py  ingest_phase_e_export.py  ingest_seed.py  ingest_vibes.py  pagerank.py  phase_c1_extended.py  phase_c1_worker.py  query.py  (+15 more)
tests/: conftest.py  test_admin.py  test_benchmarks.py  test_cache.py  test_coherence.py  test_compound_query.py  test_config.py  test_db.py  test_db_ingest.py  test_deterministic.py  test_extraction.py  test_formatting.py  test_fuzzy.py  test_ground_truth.py  test_hierarchy.py  test_ingest.py  test_ingest_phase_c.py  test_ingest_phase_e.py  test_ingest_phase_e_export.py  test_ingest_seed.py  test_mutation_gaps.py  test_navigate.py  test_navigate_refine.py  test_navigate_signals.py  test_pagerank.py  test_patterns.py  test_phase_d_audit.py  test_phase_d_expand.py  test_phase_d_heal.py  test_phase_d_training.py  test_phase_d_worker.py  test_pipeline.py  test_query.py  test_reconciler.py  test_render_question_synth.py  test_score_constraint_mcdc.py  test_server_tools.py  test_sources.py  test_spreading.py  test_spreading_activation.py  (+4 more)
(+34 files in other folders)
