[project]
name = "model-atlas"
version = "0.2.0"
description = "MCP server exposing a navigable semantic network of ML models"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "huggingface-hub>=0.20.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
ingest = [
    "outlines>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[project.scripts]
model-atlas = "model_atlas.server:main"
model-atlas-ingest = "model_atlas.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
