[project]
name = "model-atlas"
version = "0.2.0"
description = "MCP server exposing a navigable semantic network of ML models"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "huggingface-hub>=0.20.0",
    "rapidfuzz>=3.0.0",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
ingest = [
    "outlines>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
    "datasets>=2.0.0",
]

[project.scripts]
model-atlas = "model_atlas.server:main"
model-atlas-ingest = "model_atlas.ingest_cli:main"

[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]

[tool.ruff]
src = ["src", "tests"]
exclude = ["mutants", "deploy", ".claude"]

[tool.mypy]
files = ["src", "tests"]
exclude = ["^mutants/", "^deploy/", "^\\.claude/"]

[tool.bandit]
exclude_dirs = ["mutants", "deploy", ".claude", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
