[project]
name = "model-atlas"
version = "0.2.0"
description = "MCP server exposing a navigable semantic network of ML models"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "huggingface-hub>=0.20.0",
    "rapidfuzz>=3.0.0",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "Wesker @ git+https://github.com/rohanvinaik/Wesker.git",
]
ingest = [
    "outlines>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
    "datasets>=2.0.0",
]

[project.scripts]
model-atlas = "model_atlas.server:main"
model-atlas-ingest = "model_atlas.ingest_cli:main"

[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]

[tool.ruff]
src = ["src", "tests"]
exclude = ["mutants", "deploy", ".claude"]

[tool.ruff.lint.per-file-ignores]
"tests/generated/*.py" = ["F401", "F811", "E402"]

[tool.mypy]
files = ["src", "tests"]
exclude = ["^mutants/", "^deploy/", "^\\.claude/"]

[tool.bandit]
exclude_dirs = ["mutants", "deploy", ".claude", "tests"]

[tool.coverage.run]
source = ["src/model_atlas"]
omit = [
    # Worker scripts — standalone, no ModelAtlas imports, run on remote machines
    "src/model_atlas/phase_c_worker.py",
    "src/model_atlas/phase_c1_worker.py",
    "src/model_atlas/phase_c1_extended.py",
    "src/model_atlas/phase_c3_worker.py",
    "src/model_atlas/phase_d_worker.py",
    # CLI entry points — argparse + orchestration, tested via integration
    "src/model_atlas/ingest_cli.py",
    "src/model_atlas/ingest.py",
    "src/model_atlas/ingest_seed.py",
    "src/model_atlas/ingest_vibes.py",
    # External API dependencies — require HF/Ollama/datasets at runtime
    "src/model_atlas/sources/huggingface.py",
    "src/model_atlas/sources/ollama.py",
    "src/model_atlas/sources/base.py",
    "src/model_atlas/ground_truth.py",
    "src/model_atlas/search/structured.py",
    # Wiki CLI
    "src/model_atlas/wiki/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
